--- a/index.html
+++ b/index.html
@@ -395,7 +395,7 @@
         </div>
 
         <div class="social-links">
-            <a href="https://discord.gg/HhpJxrENYx" class="social-link" target="_blank" rel="noopener noreferrer"
+            <a href="https://discord.gg/eMcSqVY68X" class="social-link" target="_blank" rel="noopener noreferrer"
                 aria-label="Discord">
                 <svg width="24" height="24" viewBox="0 0 24 24" fill="currentColor">
                     <path
